--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="app.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
     <title>Pong</title>
   </head>
   <body>
+    <h1>Pong</h1>
     <canvas></canvas>
   </body>
 </html>
